# CmakeTestsExample

./: CMakeLists.txt  CPackConfig.cmake  Dockerfile  LICENSE  README.md  Vagrantfile
_builds/default/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  check  cmake_install.cmake
_builds/default/Testing/Temporary/: CTestCostData.txt
_builds/default/_3rdParty/Hunter/toolchain/_builds/: CMakeCache.txt  Makefile  cmake_install.cmake
_builds/default/_3rdParty/polly/: saved-arguments
_logs/polly/clang-cxx14/: log.txt
_logs/polly/default/: log-0.txt  log.txt
examples/: demo.cpp
include/: hex.h  sort.h
sources/: hex.cpp  sort.cpp
tests/: tests.cpp
